--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,18 @@ services:
     volumes:
       - .:/code
     ports:
-      - "80:8000"
+      - "8000:8000"
     env_file:
       - .env
+    depends_on:
+      - nginx
+  
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/conf:/etc/nginx/conf.d
+    depends_on:
+      - web
