--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     build: .
     container_name: homepage
     command: >
-      sh -c "python manage.py migrate &&
-      python manage.py collectstatic --noinput &&
-      python manage.py runserver 0.0.0.0:8000"
+      sh -c "pipenv run python manage.py migrate &&
+             pipenv run python manage.py collectstatic --noinput &&
+             pipenv run python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
