--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,5 @@ jobs:
           cd /home/stefan/homepage
           git pull origin main
           docker compose down
-          docker compose up --build -d
+          docker compose build --no-cache
+          docker compose up -d
