Changed workflow deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,10 @@ jobs:
         host: ${{ secrets.VPS_HOST }}
         username: ${{ secrets.VPS_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        script:
+        script: |
           eval "$(ssh-agent -s)"
           ssh-add ~/.ssh/nordvolldev-to-github
+          cd /home/stefan/homepage
           git pull origin main
           docker compose down
           docker compose build --no-cache
