--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,27 @@ services:
     command: ["/app/entrypoint.sh"]
     volumes:
       - .:/app
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     env_file:
       - .env
+    networks:
+      - app_network
+
+  nginx:
+    image: nginx:alpine
+    container_name: homepage_nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./staticfiles:/app/staticfiles:ro
+    depends_on:
+      - web
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
   
