--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,8 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./staticfiles:/app/staticfiles:ro
-    user: "nginx:nginx"
+      - nginx_cache:/var/cache/nginx
+      - nginx_temp:/var/run/nginx
     depends_on:
       - web
     networks:
@@ -29,4 +30,8 @@ services:
 networks:
   app_network:
     driver: bridge
+
+volumes:
+  nginx_cache:
+  nginx_temp:
   
